--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </div>
             </div>
               <div class="pic_container px-5">
-                <img src="/pics & icons/dog_pc.png" alt="Example image" width="700" height="400" loading="lazy">
+                <img src="pics & icons/dog_pc.png" alt="Example image" width="700" height="400" loading="lazy">
             </div>
         </div>
         
@@ -101,7 +101,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="container">
-                <div class="photo"><img src="/pics & icons/Rocky.jpg" width="400rem" height="300"></div>
+                <div class="photo"><img src="pics & icons/Rocky.jpg" width="400rem" height="300"></div>
                 <div class="carousel-caption">
                   <h1>Rocky, Bombay</h1>
                   <p>"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</p>
@@ -110,7 +110,7 @@
             </div>
             <div class="carousel-item">
               <div class="container">
-                <div class="photo"><img src="/pics & icons/Pebbles.jpg" width="400rem" height="300"></div>
+                <div class="photo"><img src="pics & icons/Pebbles.jpg" width="400rem" height="300"></div>
                 <div class="carousel-caption">
                   <h1>Pebbles, New York</h1>
                   <p>"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</p>
@@ -119,7 +119,7 @@
             </div>
             <div class="carousel-item">
               <div class="container">
-                <div class="photo"><img src="/pics & icons/poltu.jpg" width="400rem" height="300"></div>
+                <div class="photo"><img src="pics & icons/poltu.jpg" width="400rem" height="300"></div>
                 <div class="carousel-caption">
                   <h1>Poltu, Kolkata</h1>
                   <p>"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</p>
